--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
     implementation 'com.google.code.gson:gson:2.7'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation 'androidx.drawerlayout:drawerlayout:1.0.0'
+
 
 }
